--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,4 +78,4 @@ jobs:
             ./docker-bake.hcl
             ${{ steps.meta.outputs.bake-file }}
           targets: image-all
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
+          push: true
