--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           files: |
             ./docker-bake.hcl
-            ${{ steps.meta.outputs.bake-file }}
+          # ${{ steps.meta.outputs.bake-file }}
           targets: image-all
+          tags: v2.8
           push: true
