--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=ref,event=pr
+            type=ref,event=branch
+            type=sha
           # don't create latest tag on release/2.x
           flavor: |
             latest=false
@@ -76,7 +78,6 @@ jobs:
         with:
           files: |
             ./docker-bake.hcl
-          # ${{ steps.meta.outputs.bake-file }}
+           ${{ steps.meta.outputs.bake-file }}
           targets: image-all
-          tags: v2.8
           push: true
